<resources>
    <string name="app_name">Hospital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dispositivos Móviles</string>
    <string name="nav_header_subtitle">Sistema Hospitalario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_home">Hospitales</string>
    <string name="menu_gallery">Médicos</string>
    <string name="menu_slideshow">Pacientes</string>
    <string name="menu_tools">Citas</string>
    <string name="menu_share">Hospitales</string>
    <string name="menu_send">Médicos</string>
    <string name="direc">Dirección</string>
    <string name="nombre">Nombre</string>
    <string name="tel">Teléfono</string>
    <string name="register">Registrar</string>
    <string name="clean">Limpiar</string>
    <string name="show">Mostrar</string>
    <string name="nameH">Nombre Hospital</string>
    <string name="dirH">Dirección Hospital</string>
    <string name="fechaC">Ingresar Fecha</string>
    <string name="consul">Consultar</string>
    <string name="introregHospital">Registro de Hospitales</string>
    <string name="labelPaciente">Paciente</string>
    <string name="labelMedico">Médico</string>
    <string name="labelHospital">Hospital</string>

</resources>
