<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fixPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelPaciente" />

        <Spinner
            android:id="@+id/spPacientesCitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fixDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelMedico" />

        <Spinner
            android:id="@+id/spMedicos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CalendarView
            android:id="@+id/dateCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btRegisterCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>